# wsl-gpg-agent

./: .gitignore  Cargo.toml  README.md  about.toml  about.txt.hbs
.github/: dependabot.yml
.github/workflows/: pr_checks.yml  release.yml
src/: gpg.rs  licenses.rs  main.rs  ssh.rs
src/ssh/: file_mapping.rs  mod.rs  pageant_window.rs  shared_memory.rs  ssh_agent.rs
