[package]
name = "wsl-gpg-agent"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["rt", "io-std", "io-util", "net", "macros", "rt-multi-thread"] }
tokio-util = { version = "0.7.1", features = ["codec"] }
futures = "0.3.21"
anyhow = "1.0.57"
dirs = "4.0.0"
clap = { version = "3.1.15", features = ["derive"] }
flexi_logger = { version = "0.22", features = [] }
log = "0.4"
widestring = "0.5"

[dependencies.windows]
version = "^0.35"
features = [
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_Security",
    "Win32_UI_WindowsAndMessaging",
]

[dev-dependencies]
rand = "0.8.5"

[dev-dependencies.windows]
version = "^0.35"
features = [
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Gdi"
]
