[package]
name = "wsl-gpg-agent"
version = "0.1.2"
edition = "2021"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["rt", "io-std", "io-util", "net", "macros", "rt-multi-thread"] }
tokio-util = { version = "0.7.11", features = ["codec"] }
futures = "0.3.30"
anyhow = "1.0.86"
dirs = "5.0.1"
clap = { version = "4.5.4", features = ["derive"] }
flexi_logger = { version = "0.29", features = [] }
log = "0.4"
widestring = "1.1"

[dependencies.windows]
version = "0.56.0"
features = [
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_Security",
    "Win32_UI_WindowsAndMessaging",
]

[dev-dependencies]
rand = "0.8.5"

[dev-dependencies.windows]
version = "0.56.0"
features = [
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Gdi"
]
